--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,7 @@ body {
 img {
   margin-bottom: 1px;
   margin-right: 1px;
+  max-width: 100%;
 }
 
 .text-center {
@@ -15,4 +16,42 @@ img {
   max-width: 940px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.wrapper {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.wrapper.two-by-two {
+  grid-template-columns: 1fr 1fr;
+  min-height: 300px;
+}
+
+.wrapper.two-by-two .image-box:last-of-type {
+  grid-column: span 2;
+}
+
+.hero {
+  grid-column: span 2;
+}
+
+.image-box {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+@media(max-width:820px) {
+  .wrapper {
+    grid-template-columns: 1fr !important;
+  }
+  .wrapper * {
+    grid-column: span 1;
+  }
+  .wrapper .image-box {
+    width: 100%;
+    height: 400px;
+  }
 }
